Bug 47503 - FILEOPEN: LibO 3.5.0+ crashes when opening some Excel 2003 files.
Summary: FILEOPEN: LibO 3.5.0+ crashes when opening some Excel 2003 files.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.1 release
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:3.6.0 target:3.5.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-03-19 05:18 UTC by Karel Behounek
Modified: 2012-03-21 00:56 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
problematic file that causes LibO crashing (175.00 KB, application/vnd.ms-excel)
2012-03-19 05:18 UTC, Karel Behounek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karel Behounek 2012-03-19 05:18:38 UTC
Created attachment 58681 [details]
problematic file that causes LibO crashing

Problem description: 

There are specific files created in MS Office 2003 which cause LibO 3.5.0 / 3.5.1 crashing (when opened). The same files worked fine with LibO up to 3.4.x.

Steps to reproduce:
1. (try to) open the file http://goo.gl/kAhlO (the same file attached)

Current behavior: LibreOffice crashes with the message "Due to an unexpected error, LibreOffice crashed. All the files you were working on will now be saved. The next time LibreOffice is launched, your files will be recovered automatically."

Expected behavior: the file opens

Platform (if different from the browser): 
              
Browser: Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 5.1; Trident/4.0; .NET CLR 2.0.50727; .NET CLR 3.0.4506.2152; .NET CLR 3.5.30729; .NET CLR 1.1.4322; .NET4.0C; .NET4.0E)
Comment 1 s-joyemusequna 2012-03-19 06:26:09 UTC
Confirmed (Windows XP / Vista64)
LibO 3.4.5 OK
LibO 3.5.1 crashes => REGRESSION
Comment 2 Not Assigned 2012-03-19 15:28:28 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=95c65a363fa4cd0cbbfa93d53e10d86b3fb275f2

check for negative sheet number here too, fdo#47503
Comment 3 Not Assigned 2012-03-20 03:16:40 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f24545a72cf43d0852c4f8edae0b3a9919120cdd&g=libreoffice-3-5

check for negative sheet number here too, fdo#47503


It will be available in LibreOffice 3.5.2.
Comment 4 Karel Behounek 2012-03-21 00:56:06 UTC
Thanks a lot for the prompt response. Confirmed fixed in

LOdev 3.5.3rc0+ (Win-x86@15-Prague Win32)
Build ID: fb03509-a73d29c-73cb0b8-f269e46-638d9c5