check for negative sheet number here too, fdo#47503