sc/source/core/data/documen5.cxx
@@ -639,7 +639,7 @@ void ScDocument::SetChartRangeList( const rtl::OUString& rChartName,
 
 bool ScDocument::HasData( SCCOL nCol, SCROW nRow, SCTAB nTab )
 {
-    if (nTab < static_cast<SCTAB>(maTabs.size()) && maTabs[nTab])
+    if ( VALIDTAB(nTab) && nTab < static_cast<SCTAB>(maTabs.size()) && maTabs[nTab])
         return maTabs[nTab]->HasData( nCol, nRow );
     else
         return false;
